changes to see why documentation isnt showing correctly

--- a/perturbing_z.ipynb
+++ b/perturbing_z.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -450,17 +450,40 @@
       "root adjustment converged!\n",
       "root adjustment converged!\n",
       "root adjustment converged!\n",
-      "root adjustment converged!\n"
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!"
      ]
     }
    ],
    "source": [
-    "retrieve_roots = make_roots_data(stepping_tuple);"
+    "retrieve_roots = make_roots_data(stepping_tuple)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -471,23 +494,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAmsAAAJPCAYAAAAjcZPEAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X+MZWd5H/DvQwjKpCGUBGEqmyhBwdSmEalpTCraMAr1\nDBDVQFeiRG2zaVBGCkmhygitnaRi/wOibn6ghkgOKhkiGouEOjgN5XqRM1FXKsWBAA42sGoCst1g\nQqgiJV0V3Lz9Y65hvDuz8+PeO+ecez4fabQz5947c/b4+Owz9/k+76nWWgAA6Kcndb0DAADsT7EG\nANBjijUAgB5TrAEA9JhiDQCgxxRrAAA9NpdiraqeVlW/VVUPVtWnqupFVfX0qrqnqj5TVZOqetqu\n599eVRenz1+bxz4AACyjeb2z9stJPtBauyHJC5J8OsltST7UWnteknuT3J4kVXVjktckuSHJy5O8\no6pqTvsBALBUZi7Wqupbk/zj1tq7kqS19lhr7S+TvDLJ1vRpW0leNf381iR3Tp/3uSQXk9w8634A\nACyjebyz9l1JvlRV76qqj1XVHVX1zUmuaa09miSttS8keeb0+dcmeWjX6x+ZbgMA4DLzKNaenOSm\nJL/SWrspyV9npwV6+X2s3NcKAOCInjyH7/Fwkodaa384/fp92SnWHq2qa1prj1bVs5J8cfr4I0me\nvev11023XaGqFHgAwGC01uaew5/5nbVpq/Ohqrp+uumlST6V5O4kPzrddjrJ+6ef353ktVX1lKr6\nriTfneQjV/n+Pk7w481vfnPn+zC2D8fcMR/Dh2PumI/hY1Hm8c5akrwhyXuq6huT/EmSf53kG5K8\nt6p+LMnnszMBmtbaA1X13iQPJPlqkte3Rf4NAQAGbC7FWmvtE0m+b4+H/sk+z39LkrfM42cDACwz\ndzDgCVZXV7vehdFxzE+eY37yHPOT55gvj+pzB7KqdEgBgEGoqrQ+DhgAALA4ijUAgB5TrAEA9Jhi\nDQCgxxRrAAA9plgDAOgxxRoAQI8p1gAAekyxBgDQY4o1AIAeU6wBAPSYYg0AoMcUawAAPaZYAwDo\nMcUaAECPKdYAAHpMsQYA0GOKNQCAHlOsAQD0mGINAKDHFGsAAD2mWAMA6DHFGgBAjynWAAB6TLEG\nANBjijUAgB5TrAEA9JhiDQCgxxRrAAA9plgDAOgxxRoAQI8p1gAAekyxBgDQY4o1AIAeU6wBAPSY\nYg0AoMcUawAAPaZYAwDoMcUaAECPKdYAAHpMsQYA0GOKNQBYgMlkkrW1U1lbO5XJZNL17jBg1Vrr\neh/2VVWtz/sHAHuZTCZ59atP59KltyVJVlbO5K67trK+vt7xnrFIVZXWWs39+/a5GFKsATBEa2un\ncv78rUlOT7ds5ZZb7s4997yvy91iwRZVrGmDAgD02JO73gEAWDabmxu5cOF0Ll3a+Xpl5Uw2N7e6\n3SkGSxsUABZgMpnk3Lk7kuwUb/Jqy09mDQbKBRtgHBRrMEAmwgDGQ7EGA2QiDGA8TIMCMBOLtMIw\nmQaFBTIRRl9c3pK/cOG0ljwMhDYoLJgBA/pASx4Wb1FtUO+swYKtr68r0AA4NsUawAhoycNwaYMC\njISWPCyWpTsAAHrM0h0AA2XJDGAW3lkDWCB3sYDx0AYFGCBLZsB4aIMCx6YNBzBclu6AJWfl+m5Z\nMgOYlTYoLDltuO5ZMgPGwR0MAAbKXSyAWSjWYMlpwwEMmzYojIA2HMDiWboDABbILzXMSrEGAAti\n8WLmQbEGAAtiapp5sCguAMAIKdZYKCvnA0OwubmRlZUzSbaSbE2npje63i1Iog3KAsmAAENiwIBZ\nyawxODIgAIyJzBoAwAi5gwELY+V8AJidNigLJQMCsHiutf0gswYAXMEwV38o1gCAKxjm6g8DBgAA\nI2TAAAAGzDDX8tMGHTmhVIDhcy3vB5k15k4oFQDmp/eZtap6UlV9rKrunn799Kq6p6o+U1WTqnra\nrufeXlUXq+rBqlqb1z5wNOfO3TEt1E4n2SnaHv/NDADoh3kOGLwxyQO7vr4tyYdaa89Lcm+S25Ok\nqm5M8pokNyR5eZJ3VNXcq1AAgGUwl2Ktqq5L8ook79y1+ZVJHk84biV51fTzW5Pc2Vp7rLX2uSQX\nk9w8j/3gaDY3N7KyciY7/3m2pqHUja53CwDYZV7vrP1ikjcl2R0wu6a19miStNa+kOSZ0+3XJnlo\n1/MemW7jhK2vr+euu3bW47nllrvl1QB6ZDKZZG3tVNbWTmUymXS9O3Ro5qU7quqHkjzaWvt4Va1e\n5akmBXpofX1dgQbQM5cPgF24cNov1CM2j3XWXpzk1qp6RZKVJE+tqt9I8oWquqa19mhVPSvJF6fP\nfyTJs3e9/rrptj2dPXv2a5+vrq5mdXV1DrsMAP31xAGw5NKlnW2KtX7Z3t7O9vb2wn/OXJfuqKqX\nJNlsrd1aVT+f5C9aa2+rqjNJnt5au206YPCeJC/KTvvzfJLn7rVGh6U7ABgjt5AapkUt3bHIOxi8\nNcl7q+rHknw+OxOgaa09UFXvzc7k6FeTvF5FBgBf564E7GZRXJaS1byBoXMdGx53MIBDcmcGALqg\nWINDkvUAoAu9v90UAADzp1hj6bgzAwyLxV/h6rRBWUqCuTAMMqYsE5k1AJaOjCnLRGYNAGCEFrko\nLgBclcVf4WDaoAB0SsaUZSGzBoyaf9CBvlOsAaNlYhAYAsUaMFomBoEhMA0KADBCpkGB3no8p/al\nLz2apzzlTfnKV3a2mxgExkQbFOily3NqT3nKv83zn/+CPOMZ327AAOilRbVBvbMG9NK5c3dMC7Wd\nnNpXvpI84xlyasD4yKwBAPSYd9aAXrKyPcAOmTWgtyyECwyJddYAWGqKc4ZOsQbA0nKXCpaBYg2A\npeUuFSwDdzAAABghxRpLYzKZZG3tVNbWTmUymXS9O8ARbG5uZGXlTJKtJFvT6d+NrncLekEblKUg\n7wLDZ8CAoZNZg6uQdwGgazJrAAAj5A4GLAWr3QOwrLRBWRryLsCycV0bFpk1ABgRg1PDo1gDgBEx\nODU8BgwAAEbIgAEA9JDBKR6nDTpywqsA/eUaPSwya8yd8CoAzI9ijbkTXgWA+TFgAAAwQgYMRkx4\nFQD6Txt05IRXAYbPtbwfZNYAgCsYFusPxRoAcAXDYv1hwAAAYIQMGADAgBkWW37aoCyc4CvAYrnO\n9oPMGoMk+ArAWCjWGCTBVwDGwoABAMAIKdZYqM3NjaysnEmylWRrGnzd6Hq3AJ5gMplkbe1U1tZO\nZTKZdL078ATaoCyc4CvQZ7K1zIvMGgAsgGwt8yKzBgAwQhbFBWDULCpL32mDAjB6srXMg8wacCz+\nEQI4GYo14MhMuQGcHMUacGSm3ABOjmlQAIARUqzBEnMHiX6wOj4wC21QWHIGDLolNwjjIbMGMEBy\ngzAeMmsAACPkDgYAC2R1fGBW2qAACyY3COMgswbAkSkU4eQo1gA4EpOocLIUawAciUlUOFmmQWHg\nLIwKwHGYBoUTcHk76sKF09pRLJxJVFgO2qBwArSj6IoBAzg5i2qDemcNYImtr68r0GDgFGtwArSj\nADgubVA4IdpRAMvN0h0A0HN+KRs3xRoA9JhFiFGsAUCPmfrGorgAACOkWOPQrMAPsL/NzY2srJxJ\nspVkazr1vdH1brEEtEE5FFkMgIMZMBg3mTU6JYsBAFcnswYAMELuYMChWIEfALqhDcqhyWIAwP5k\n1gCAq/JLdbcUawDAvkztd6+3AwZVdV1V3VtVn6qq+6vqDdPtT6+qe6rqM1U1qaqn7XrN7VV1saoe\nrKq1WfcBAMbu3Lk7poXa6SQ7Rdvj77IxbPOYBn0syU+31p6f5B8m+cmq+rtJbkvyodba85Lcm+T2\nJKmqG5O8JskNSV6e5B1VNfcqFABgGcxcrLXWvtBa+/j0879K8mCS65K8MjvLOGf656umn9+a5M7W\n2mOttc8luZjk5ln3AwDGzB0Ultdc11mrqu9M8r1JPpzkmtbao8lOQZfkmdOnXZvkoV0ve2S6jZ5w\nWymA4VlfX89dd+0sWH7LLXfLqy2Rua2zVlXfkuS3k7yxtfZXVXX5ZIBJgQG4PKB64cJp/8MDDMT6\n+rrr9RKaS7FWVU/OTqH2G6219083P1pV17TWHq2qZyX54nT7I0mevevl10237ens2bNf+3x1dTWr\nq6vz2GX28cSAanLp0s42//MDwBNtb29ne3t74T9nLkt3VNW7k3yptfbTu7a9LcmXW2tvq6ozSZ7e\nWrttOmDwniQvyk7783yS5+61RoelO06ee4ACwPH0eemOFyf5F0l+sKr+qKo+VlUvS/K2JLdU1WeS\nvDTJW5OktfZAkvcmeSDJB5K8XkXWHwKqAIsjE8xxWBSXK1gBG2D+LFq7/NzBAAAGTMxk+fW2DQoA\nwOLMbekOAGB/m5sbuXDhdC5d2vl6JxO8dfUXQbRBAeDEyAQvN5k16IiLKwCHoViDDpjeAuCwFGvQ\nAdNbAByWaVAAOmMxV+iOaVC4CtNbcGUc4MKF0+IAcIK0QeEABgwYO3EAOJxFtUG9swYHWF9fV6AB\n0BnFGgBXJQ4A3dIGBeBA4gBwMEt3ACyYggSYhWINYIEsgAzMSrEGsEAmHoFZWRQXAGCEFGvAkS3j\navabmxtZWTmTZCvJ1nTicaPr3QLQBgWOZpmzXQYMgFnIrAG9INsFsDeZNQCAEXIHA+BIrGYPcLK0\nQYEjk+0CuJLMGgBchV8i6JpiDQD2scxTygyHYg0A9mFKmT4wDQoAMEKKNXpnGVfHBxbLHShYZtqg\n9IrcCXBcBgzomswaoyB3AsBQyawBAIyQOxjQK1bHB4An0gald+ROAPbm+thvMmsAMGIGsPpPsQYA\nI2YAq/8MGAAAjJABAwAYAANY46UNOlJCqgDD49rdbzJrzI2QKgDMn2KNuRFSBYD5M2AAADBCBgxG\nSEgVAIZDG3SkhFQBhsn1u79k1gBg5AyI9ZtiDQBGzoBYvxkwAAAYIQMGADAQBsTGSRuUzgnLAhye\na2Z/yayxlIRlAVgWijWWkrAsAMvCgAEAwAgp1ujU5uZGVlbOJNlKsjUNy250vVvAwE0mk6ytncra\n2qlMJpOudwdmog1K54RlgXmShaUrMmsAcAiysHRFZg0AYIQsigvAUrFwLMtGGxSApSMLSxdk1oAT\n5x88gMNTrAEnykQdwNEo1oATZaIO4GhMgwIAjJBiDdiTu0t8ndXwgS5pgwL7MmAguwccnswaQAdk\n94DDklkDABghdzAAuAqr4QNd0wYFOIDsHnAYMmsALJzCFI5PsQbAQpl8hdko1gBYKJOvMBvToAAA\nI6RYg2Oyqj3Lxl0roJ+0QeEYZHtYVgYM4Phk1qBHZHsAuJzMGgDACLmDARyDVe0BOCnaoHBMsj3A\nQVwnxkVmDQAGxCDS+CjWAGBADCKNjwEDAIARMmAAAAtgEIl50QZlX4KxALNxHR0XmTVOlGAsAByN\nYo0TJRgLAEezdAMGVfWyqvp0VX22qs50tR8AAH3WyYBBVT0pyX9I8tIk/yvJfVX1/tbap7vYH64k\nGAsA/dDVO2s3J7nYWvt8a+2rSe5M8sqO9oU9rK+v5667dlqft9xyt7waQM9NJpOsrZ3K2tqpTCaT\nrneHOeoks1ZVp5Kst9Y2pl//yyQ3t9becNnzZNYA4ACGwvphUZk166wBwMCdO3fHtFDbGQq7dGln\nm2JtOXRVrD2S5Dt2fX3ddNsVzp49+7XPV1dXs7q6usj9AgA4lO3t7Wxvby/853TVBv2GJJ/JzoDB\nnyX5SJIfbq09eNnztEEB4ADaoP2wVEt3tNb+X5KfSnJPkk8lufPyQo3uCasCDIOhsOVmUVz25Lc0\nADgadzDgRLmDAQAczVK1QQEAOBzFGnva3NzIysqZJFtJtqZ3MNjoercABkX2l3nQBmVfk8kk587d\nkWSneJNXAzg82d/xkVkDgAGR/R0fmTUAgBFyuykAWIDNzY1cuHA6ly7tfL2T/d3qdqcYJG1QAFgQ\n2d9xkVmDnnERBmA3xRr0iCkvAC6nWIMeMeUFwOVMgwIAjJBiDY7BHR5YVlbch/7RBoVjMmDAspHF\nhNnIrAGwULKYMBuZNQCAEXIHAwCSWHEf+kobFICvkcWE45NZA+iIAgY4DMUaQAdMSAKHpVgD6IAJ\nSeCwTIMCJ84CqQDdMw0K7Ony9t+FC6dH2f4zIQl0TRsU2JP239cZMAAOY1FtUO+sARxgfX1dgQZ0\nRrEG7En7D6AftEGBfWn/ARyepTsA4JD8okEXFGsAcAgWMqYrijUAOASTzHTForgAACOkWKNzVskH\n5mlzcyMrK2eSbCXZmk4yb3S9W3Bs2qB0SrYEWAQDBnRBZo2lJFsCwLKQWQMAGCF3MKBTVskHgKvT\nBqVzsiUALAOZNQDAL7g9plgDgJEzQd9vijUAGDkT9P1mGhQAYIQUayPlrgEAw+PuDOOkDTpCMg8A\nw2XAoL9k1pgbmQcAmD+ZNQCAEXIHgxFy1wAAGA5t0JGSeQAYHtfufpNZA4ARMxzWf4o1ABgxw2H9\nZ8AAAGCEDBgAwAAYDhsvbVAAGAgDBv0ms8ZouBgBMESKNUbBtBMAQ6VYYxRMOwEwVKZBAQBGSLFG\nr2xubmRl5UySrSRb02mnja53CxiAyWSStbVTWVs7lclk0vXuwNxog9I7BgyAo5J3pQ9k1gBgH/Ku\n9IHMGgDACLmDAQCDZ3V/lpk2KABLQd6VrsmsAb3hH0WAKynWgF4wdQewN8Ua0Aum7gD2ZhoUYMEs\nqgr0kWlQ4EiWderu8vbuhQuntXeBXtAGBY5sGQcMtHeBWS2qDeqdNeDI1tfXl6JAAxgCxRpAlre9\nCwyfNijA1DK2d4GTY+kOADqjkIWDKdYA6ISFkOFwFGsAdMKkLByORXEBAEZIsQYHsKo9Y7e5uZGV\nlTNJtpJsTSdlN7reLRgNbVC4Clkd2GHAAA4mswYdkNUB4LBk1gAARsgdDOAqrGoPQNe0QeEAsjoA\nHIbMGgAMnF/+lptiDQAGzHT58lOsAcCAmS5ffr2cBq2qn6+qB6vq41X1vqr61l2P3V5VF6ePr+3a\nflNVfbKqPltVvzTLzwcAWHazLt1xT5Lnt9a+N8nFJLcnSVXdmOQ1SW5I8vIk76iqxyvNX03yutba\n9Umuryrv//aMFfsB5s+dIDiuubVBq+pVSU611v5VVd2WpLXW3jZ97L8mOZvk80nuba3dON3+2iQv\naa39xD7fUxv0hMlUACyOAYPltqg26DzXWfuxJL85/fzaJP9912OPTLc9luThXdsfnm6nJ86du2Na\nqO1kKi5d2tnmggIwu/X1dddTjuzAYq2qzie5ZvemJC3Jz7bWfnf6nJ9N8tXW2m/u8S0AADimA4u1\n1totV3u8qn40ySuS/OCuzY8kefaur6+bbttv+77Onj37tc9XV1ezurp60C4zAyv2A8DhbG9vZ3t7\ne+E/Z6bMWlW9LMm5JD/QWvuLXdtvTPKeJC/KTpvzfJLnttZaVX04yRuS3Jfk95K8vbX2wX2+v8xa\nB2QqAIbJ9btbvVxnraouJnlKkscLtQ+31l4/fez2JK9L8tUkb2yt3TPd/sIkv57km5J8oLX2xqt8\nf8UaAByCAbHu9bJYWzTFGgAcjkV3u9fLRXEBAFiseS7dAQB0xIDY8tIG5dAEVwH6zXW6WzJrdEpw\nFQCuTrFGpwRXAeDqDBgAAIyQYo1D2dzcyMrKmSRbSbamwdWNrncLoFcmk0nW1k5lbe1UJpNJ17vD\nktAG5dAEVwH2J9uLzBoA9JhsLzJrAAAjZFFcAJgDi9KyKNqgADAnsr3jJrMGA+ciDrDcFGswYKbE\nAJafYg0GzJQYwPIzDQoAMEKKNTgB7gBBV6yoD8OnDQonxIABJ01WEk6WzBoARyIrCSdLZg0AYITc\nwQBgSVlRH5aDNijAEpOVhJMjswYwUAomGAfFGsAAmciE8VCsAQyQiUwYD9OgAAAjpFiDJWcF+265\newUwK21QWGLyUv1gwADGQWYNODJ5KYCTI7MGADBC7mAAS8wK9gDDpw0KS05eCuBkyKwBwIL4pYZ5\nUKwBwAKYmmZeFGsAsACmppkX06AAACOkWGPhrKAP9Jm7TNB32qAslCwIMAQGDJgHmTUGSRYEgLGQ\nWQMAGCF3MGChrKAPALPRBmXhZEEAFst1th9k1gCAKxjk6g/FGgBwBYNc/WHAAABghAwYAMCAGeRa\nftqgIyeUCjB8ruX9ILPG3AmlAsD8KNaYO6FUAJgfAwYAACOkWBuxzc2NrKycSbKVZGsaSt3oercA\nmJpMJllbO5W1tVOZTCZd7w4d0QYdOaFUgH6SKx4emTUAGBG54uGRWQMAGCGL4gJAD1nslsdpgwJA\nT8kVD4vMGhzARQ2ALinW4CpMTQHQNcUaXIWpKQC6ZhoUAGCEFGssBXdjgOGzWj/sTRuUpWHAAIZL\n7pRlILMGwNKSO2UZyKwBAIyQOxgA0Dmr9cP+tEEB6AW5U4ZOZg0YHf94A0OiWANGxXQgMDSKNWBU\nTAcCQ2MaFBi5+/PRj37CgqnA6HhnDeilJ7ZB70/ya0nenkRLFOgnbVBgdB4fMPjoRz+RL3/530VL\nFOgzbVBgdNbX13PPPe/LC1/4gq53BaAzFsUFes+CqcCYaYMCg2DNNaDvZNYAWEoKcZaFYg2ApWPx\nY5aJYg2ApWPxY5aJaVAAgBFSrLGUJpNJ1tZOWe0eem5zcyMrK2eSbCXZmk76bnS9W9Ar2qAsHRkY\nGBYDBiwLmTU4JBkYALogswYAMELuYMDSsdo9AMtkLu+sVdVmVf1NVX3brm23V9XFqnqwqtZ2bb+p\nqj5ZVZ+tql+ax8+H3dbX13PXXTutz1tuuVteDYBBmzmzVlXXJXlnkucleWFr7ctVdUOS/5Tk+5Jc\nl+RDSZ7bWmtV9T+S/FRr7b6q+kCSX26t7TmuJ7MGwFgZvBiePmfWfjHJmy7b9sokd7bWHmutfS7J\nxSQ3V9Wzkjy1tXbf9HnvTvKqOewDACyNx6faz5+/NefP35pXv/q0ZYhGbKZirapuTfJQa+3+yx66\nNslDu75+ZLrt2iQP79r+8HQbADB17twd0+WHTifZWYro8XfZGJ8DBwyq6nySa3ZvStKS/FySn0ly\ny2J2DQCAA4u11tqexVhV/b0k35nkE1VV2cmmfayqbs7OO2nfsevp1023PZLk2Xts39fZs2e/9vnq\n6mpWV1cP2mWOQCYCoH9MtQ/D9vZ2tre3F/5z5rYoblX9aZKbWmv/u6puTPKeJC/KTpvzfL4+YPDh\nJG9Icl+S30vy9tbaB/f5ngYMFshK/wD95Zfp4en9HQyq6k+S/IPW2penX9+e5HVJvprkja21e6bb\nX5jk15N8U5IPtNbeeJXvqVhbICv9A8D8LKpYm9uiuK2151z29VuSvGWP5300yffM6+cCACwzdzAY\nMZkIAOg/N3IfOZkIgOFzLe+H3mfWFkGxBgBXZ1isPxRrAMAVDIv1R59vNwUAwIIYMACAATMstvy0\nQVkooVeAxXOt7QeZNQZH6BWAMVGsMThCrwCMiQEDAIARUqyxMJubG1lZOZNkK8nWNPS60fVuAexp\nMplkbe1U1tZOZTKZdL078DXaoCyU0CswBDK2zIPMGgAsiIwt8yCzBgAwQhbFBWD0LCxLn2mDAkBk\nbJmdzBpwbP4RAlg8xRpwLKbcAE6GYg04FlNuACfDNCgAwAgp1mDJuZNE96yMD8xCGxRGwIBBd2QG\nYTxk1gAGSGYQxkNmDQBghNzBAGCBrIwPzEobFGDBZAZhHGTWAJiJohEWS7EGwLGZSoXFU6wBcGym\nUmHxTIMCAIyQYg0WzOr19IE7WcBwaYPCAskJ0ScGDGCxZNZggOSEAMZDZg0AYITcwQAWyOr1AMxK\nGxQWTE4IYBxk1gBgQPyiNj6KNQAYCJPg46RYA4CBMAk+TqZBAQBGyDQoAMyZSXDmSRsUABbAgMH4\nyKwBAPSYzBoAwAgp1gAAekyxBgDQY4o1AIAeU6wBAPSYYg0AoMcUawAAPaZYAwDoMcUaAECPKdYA\nAHpMsQYA0GOKNQCAHlOsAQD0mGINAKDHFGsAAD2mWAMA6DHFGgBAjynWAAB6TLEGANBjijUAgB5T\nrAEA9JhiDQCgxxRrAAA9plgDAOgxxRoAQI8p1gAAekyxBgDQY4o1AIAeU6wBAPSYYg0AoMcUawAA\nPaZYAwDoMcUaAECPKdYAAHpMsQYA0GOKNQCAHlOsAQD0mGINAKDHFGsAAD2mWAMA6DHFGgBAj81c\nrFXVv6mqB6vq/qp6667tt1fVxelja7u231RVn6yqz1bVL8368wEAltlMxVpVrSb5p0m+p7X2PUn+\n/XT7DUlek+SGJC9P8o6qqunLfjXJ61pr1ye5vqrWZ9kH5mt7e7vrXRgdx/zkOeYnzzE/eY758pj1\nnbWfSPLW1tpjSdJa+9J0+yuT3Nlae6y19rkkF5PcXFXPSvLU1tp90+e9O8mrZtwH5sj/3CfPMT95\njvnJc8xPnmO+PGYt1q5P8gNV9eGq+v2qeuF0+7VJHtr1vEem265N8vCu7Q9PtwEAsIcnH/SEqjqf\n5Jrdm5K0JD83ff3TW2vfX1Xfl+S3kjxnETsKADBG1Vo7/ourPpDkba21P5h+fTHJ9yf58SRprb11\nuv2DSd6c5PNJfr+1dsN0+2uTvKS19hP7fP/j7xwAwAlrrdXBzzqaA99ZO8DvJPnBJH9QVdcneUpr\n7S+q6u4k76mqX8hOm/O7k3yktdaq6i+r6uYk9yX5kSRv3++bL+IvDAAwJLMWa+9K8h+r6v4k/zc7\nxVdaaw9U1XuTPJDkq0le377+Ft5PJvn1JN+U5AOttQ/OuA8AAEtrpjYoAACL1ekdDKrq6VV1T1V9\npqomVfW0PZ5zfVX9UVV9bPrnX1bVGw77ep7osMesqp5WVb81XdT4U1X1oun2N1fVw9P/Hh+rqped\n7N9geOZwzJ3nR3SEY/65qvrE9NrykV3bnedHNIdj7jw/oqMcs6p60vRcvnvXNuf5Ec3hmB/rPO/6\ndlO3JflZ+pmFAAADX0lEQVRQa+15Se5NcvvlT2itfba19vdbazcleWGSv07ynw/7eq5w2GP2y9lp\nU9+Q5AVJHtz12C+01m6afmhjH2zWY+48P7rDHrO/SbI6vcbcfNljzvOjmfWYO8+P7ijH7I3ZiSZd\nznl+NLMe8+Od5621zj6SfDrJNdPPn5Xk0wc8fy3Jfzvu630c7pgl+dYk/3Of1785yWbXf48hfczh\nmDvPF3DMp4/9aZJv32O78/zkj7nzfHHH/Lok55OsJrl713bn+ckf82Od512/s/bM1tqjSdJa+0KS\nZx7w/H+e5DdneD2HO2bfleRLVfWu6Vu4d1TVyq7Hf6qqPl5V79SqOJRZj7nz/OgOe8xakvNVdV9V\n/fhljznPj2bWY+48P7rDHrNfTPKm7Bz7yznPj2bWY36s83zhxVpVna+dG7c//nH/9M9b93j6vtMO\nVfWNSW7NzsK7+zEtkbkc8ycnuSnJr7Sd9vP/yc5bt0nyjiTPaa19b5IvJPmFRfwdhmbBx/zyJWyc\n55nbteXF0+P9iiQ/WVX/aLrdeb6HBR/zw75+VGY95lX1Q0keba19PDvXkt3XE+f5HhZ8zA98/V5m\nXbrjQK21W/Z7rKoeraprWmuP1s59Q794lW/18iQfba39+a5tR3n9aMzhmD+c5KHW2h9Ov/7tJGem\n33v38f+1JL87p90etEUe8yRfcJ5faR7Xltban03//POquivJzUkuOM/3tshjHtfzPc3hmL84ya1V\n9YokK0meWlXvbq39iPN8b4s85jnmed51G/TuJD86/fx0kvdf5bk/nCe2QI/6enYceMymb9E+VDsL\nHSfJSzMNSU5Prsf9syR/vLA9XR4zHfPDvJ4rHHjMquqbq+pbpp//rexkYv94+rXz/OhmOuaHeT1X\nOMy15Wdaa9/RWntOktcmuXdaNDjPj2emY36Y1++p46DetyX5UJLPJLknyd+ebv87Sf7Lrud9c5I/\nT/LUw7zex1yO+Quyc5eJj2dn+vZp0+3vTvLJ6fbfyTQo6WOhx9x5voBjnp2c4MeT/FGS+5Pctuv1\nzvOTP+bO8wUc88ue/5I8MezuPD/5Y36s89yiuAAAPdZ1GxQAgKtQrAEA9JhiDQCgxxRrAAA9plgD\nAOgxxRoAQI8p1gAAekyxBgDQY/8fyZTa3lszoAcAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x11850ee90>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "interact(F, strength=stepping_tuple)"
    ]
@@ -523,11 +535,7 @@
   "widgets": {
    "state": {
     "0759a9231d5849e495d3ed8e6ace3193": {
-     "views": [
-      {
-       "cell_index": 31
-      }
-     ]
+     "views": []
     },
     "45fd2bad2404447fad48e1c821aaa50f": {
      "views": []
