trying to remove widget file to see if it is interfering with documentation

--- a/perturbing_z.ipynb
+++ b/perturbing_z.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -473,7 +473,74 @@
       "root adjustment converged!\n",
       "root adjustment converged!\n",
       "root adjustment converged!\n",
-      "root adjustment converged!"
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n",
+      "root adjustment converged!\n"
      ]
     }
    ],
@@ -483,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -494,12 +561,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAmsAAAJPCAYAAAAjcZPEAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X2MZfdZH/DvEwJiKEmatopT2aEQEVObIqgjHKq0ZETq\nmSSoTuhKblBbliZiJBKatIzQxoCU/Y+Y1rypBMlFDRMUkQaoiSlprh2FQV2JKKEhEOK8WC2JbJc4\nBKpIUKuK21//mGt79mV2Z+a+/e45n4802plz7505e3x89pn7fJ/fqdZaAADo0zNWvQMAABxNsQYA\n0DHFGgBAxxRrAAAdU6wBAHRMsQYA0LG5FGtV9Zyq+tWq+mRVfaKqXlJVz62q+6vq01U1qarnHHr+\nnVX10PT5W/PYBwCAIZrXO2s/m+R9rbWbknxrkk8leUuSD7TWvinJB5PcmSRVdXOSO5LclOSVSd5e\nVTWn/QAAGJSZi7WqenaSf9Bae0eStNaeaK19Kcmrk+xNn7aX5DXTz29P8u7p8z6b5KEkt866HwAA\nQzSPd9a+IckXq+odVfXRqrqnqr4myXWttceSpLX2+STPmz7/+iQPH3r9o9NtAABcYh7F2jOT3JLk\n51trtyT5yxy0QC+9j5X7WgEAnNAz5/A9HknycGvt96Zf/3oOirXHquq61tpjVfX8JF+YPv5okhcc\nev0N022XqSoFHgCwNlprc8/hz/zO2rTV+XBV3Tjd9PIkn0hyX5Lvn247m+S908/vS/LaqvqqqvqG\nJN+Y5MNX+f4+lvjx1re+deX7MLYPx9wxH8OHY+6Yj+FjUebxzlqSvCnJu6rqK5P8jyT/IslXJHlP\nVb0uyedyMAGa1tqDVfWeJA8m+XKSN7RF/g0BANbYXIq11tofJPn2Kzz0D494/k8k+Yl5/GwAgCFz\nBwMusrm5uepdGB3HfPkc8+VzzJfPMR+O6rkDWVU6pADAWqiqtB4HDAAAWBzFGgBAxxRrAAAdU6wB\nAHRMsQYA0DHFGgBAxxRrAAAdU6wBAHRMsQYA0DHFGgBAxxRrAAAdU6wBAHRMsQYA0DHFGgBAxxRr\nAAAdU6wBAHRMsQYA0DHFGgBAxxRrAAAdU6wBAHRMsQYA0DHFGgBAxxRrAAAdU6wBAHRMsQYA0DHF\nGgBAxxRrAAAdU6wBAHRMsQYA0DHFGgBAxxRrAAAdU6wBAHRMsQYA0DHFGgBAxxRrAAAdU6wBAHRM\nsQYA0DHFGgBAxxRrAAAdU6wBAHRMsQYA0DHFGgBAxxRrAAAdU6wBwABMJpNsbZ3J1taZTCaTVe8O\nc1SttVXvw5GqqvW8fwDQg8lkku/5nrN5/PG7kiQbG+dy77172d7eXvGejUtVpbVWc/++PRdDijUA\nuLatrTN54IHbk5ydbtnLbbfdl/vv//VV7tboLKpY0wYFAOjYM1e9AwDAbHZ3d3Lhwtk8/vjB1xsb\n57K7u7fanWJutEG5zGQyyd1335Pk4AIg8wDQP9fu1ZNZYymEVAHgdBRrLIWQKgCcjgEDAIARMmDA\nRYRUAaAv2qBcRkgVYP25li+fzBoAcCyGxVZDsQYAHIthsdUwYAAAMEIGDABgYAyLDYs2KIMhTAvw\nNNfE5ZNZg6sQpgVg1RRrcBXCtACsmgEDAIARUqwxCLu7O9nYOJdkL8neNEy7s+rdAhZoMplka+tM\ntrbOZDKZrHp3YGG0QRkMYVoYDzlVeiSzBgBTcqr0SGYNAGCELIoLwNqx6Ctjog0KwFqSU6U3MmsA\nJ+AfcmDZFGsAx2RSEFgFxRrAMZkUBFbBNCgwChY6BbiYaVCgG5e2Ly9cOHuq9qVJQWBItEGBbsyz\nfWnAAFi2RbVBvbMGDNL29rYCDRgExRrQDe1LgMtpgwJd0b4E1pWlOwDglPwSwDIo1gDgFCySzLIo\n1gDgFCySzLJYFBcAYIQUa3TNavbArHZ3d7KxcS7JXpK96ZTxzqp3C45tbm3QqnpGkt9L8khr7faq\nem6S/5jkbyX5bJI7Wmtfmj73ziSvS/JEkje31u4/4ntqg46YnAkwLwYMWIbuM2tV9a+TvDjJs6fF\n2l1J/qy19pNVdS7Jc1trb6mqm5O8K8m3J7khyQeSvOhKVZlibdzkTABYJ11n1qrqhiSvSvKLhza/\nOgfvOWf652umn9+e5N2ttSdaa59N8lCSW+exHwAAQzOvOxj8dJIfSfKcQ9uua609liSttc9X1fOm\n269P8ruHnvfodBtcxGr2ADCHd9aq6ruTPNZa+1iSq731p5/JiWxvb+feew9an7fddp+8GsAJGdIa\nhnm8s/bSJLdX1auSbCR5VlX9cpLPV9V1rbXHqur5Sb4wff6jSV5w6PU3TLdd0fnz55/6fHNzM5ub\nm3PYZdaFm3EDnM6lQ1oXLpz1S++c7e/vZ39/f+E/Z66L4lbVy5LsTgcMfjIHAwZ3HTFg8JIctD8f\niAEDAJgrQ1rLt6gBg3ll1q7kbUneU1WvS/K5JHckSWvtwap6T5IHk3w5yRtUZAAAV+Z2UwAwQNaq\nXL7u11lbBMXaalg8EmAYXM+XS7HGUvhNDABOR7HGUgikAsDpdH0HAwAAFmOR06CsIXcNAIC+aINy\nGYFUgL65TvdJZg0AMAjWMcUaAGAQrGMGDAAARsiAAQCsEYNg46MNChHWBdaLa1afZNZgQYR1AZgH\nxRosiLAuAPNgwAAAYIQUa4ze7u5ONjbOJdlLsjcN6+6serdgcCaTSba2zmRr60wmk8mqdwfWhjYo\nRFgXFk02lDGQWQNgbcmGMgYyawAAI2RRXAAWzkKucHraoAAshWwoQyezBrBkigvgJBRrAEtkehE4\nKcUawBKZXgROyjQo0CULnQIslmlQ4NQubRVeuHB2MK1C04tAL7RBgVMbeqvQgAFwEotqg3pnDeAI\n29vbCjRg5RRrwKlpFQIsnjYoMBOtQoADlu4AgAXxSwfzoFgDgAWwADLzolgDgAUY+lQzy2NRXACA\nEVKssVJWvwdWbXd3Jxsb55LsJdmbTjXvrHq34CnaoKyMnAjQCwMGzIPMGoMjJwLAkMisAQCMkDsY\nsDJWvweAa9MGZaXkRAAYCpk1AODY/DK8fIo1AOBYTNuvhmINADgW0/arYRoUAGCEFGtcxB0FANaf\nuzIMizYoT5FxABgOAwbLJ7PGwsk4AMDpyawBAIyQOxjwFHcUAID+aINyERkHgL64Lq8PmTUAGBmD\nX+tFsQYAI2Pwa70YMAAAGCEDBgDQKYNfJNqgcBFBXqA3rkvrQ2YNFkyQF4BZKNZgwQR5AZiFAQMA\ngBFSrMHU7u5ONjbOJdlLsjcN8u6serdgbU0mk2xtncnW1plMJpNV7w6sLW1QOESQF+ZDBpQxklkD\nYG3IgDJGMmsAACNkUVwA5s5irjA/2qAALIQMKGMjswawJIoM4DQUawBLYIoROC3FGsASmGIETss0\nKADACCnWgJkMbZV6d7IAeqMNCpzaUPNdBgyA05BZA7oj3wXwNJk1AIARcgcD4NSsUg+weNqgwEzk\nuwAOyKwBwBz4BYNFUawBwIyGOsFMHxRrADAjE8wskmlQAIARUqyxckNbAR/olztUsI60QVkp+RFg\n2QwYsCgyawyS/AgAQyGzBgAwQu5gwEpZAR8Ark4blJWTHwGYD9fT1ZJZAwCOZGBr9brNrFXVDVX1\nwar6RFV9vKreNN3+3Kq6v6o+XVWTqnrOodfcWVUPVdUnq2pr1n0AgLG7++57poXa2SQHRduT77Kx\n3uYxYPBEkh9urX1zkr+X5I1V9beTvCXJB1pr35Tkg0nuTJKqujnJHUluSvLKJG+vqrlXoQAAQzBz\nsdZa+3xr7WPTz/8iySeT3JDk1TlYdTDTP18z/fz2JO9urT3RWvtskoeS3DrrfgDAmFnwd7jmunRH\nVX19km9L8qEk17XWHksOCrokz5s+7fokDx962aPTbayQuwgArLft7e3ce+/BWpW33XafvNqAzG3p\njqr62iS/luTNrbW/qKpLJwNMCnTq0lDqhQtn/U8OsIa2t7dduwdoLsVaVT0zB4XaL7fW3jvd/FhV\nXddae6yqnp/kC9PtjyZ5waGX3zDddkXnz59/6vPNzc1sbm7OY5c55OJQavL44wfb/A8PAEfb39/P\n/v7+wn/OXJbuqKp3Jvlia+2HD227K8mft9buqqpzSZ7bWnvLdMDgXUlekoP25wNJXnSlNTos3bEc\nbvkEALPreemOlyb5p0m+q6p+v6o+WlWvSHJXktuq6tNJXp7kbUnSWnswyXuSPJjkfUneoCJbLaFU\ngP7JFo+XRXFJYtVrgJ5Z8HY9uIMBAIyUuMp66LYNCgDA4sxt6Q4AYDF2d3dy4cLZPP74wdcH2eK9\nq7+IwdAGBYA1IFvcP5k1OCEXNgCWSbEGJ2ByCoBlU6zBCZicAmDZTIMCAIyQYo1BclcGWD9W6Icr\n0wZlsAwYwPqQM2UIZNYAGCw5U4ZAZg0AYITcwQCAlbNCPxxNGxSALsiZsu5k1gAu4R93oCeKNYBD\nTA8CvVGsARxiehDojWlQYBQsjApwMdOgQDcubW1euHD2yNam6UFgLLRBgW6ctLVpwADoyaLaoN5Z\nA9bW9va2Ag0YPMUa0A2tTYDLaYMCXdHaBNaVpTsAGC1FPOtAsQbAKFkAmXWhWANglCyAzLqwKC4A\nwAgp1lhbVrqHcdjd3cnGxrkke0n2plPCO6veLVgabVDWkgwLjIsBA9aBzBocIsMCQG9k1gAARsgd\nDFhLVroHYCy0QVlbMiwA9ERmDQBGzi+pfVOsAcCImYLvn2INAEbMFHz/TIMCAIyQYm3k3AUAYD24\nk8N4aYOOmPwDwHoxYNA3mTXmTv4BAOZHZg0AYITcwWDE3AUAAPqnDTpy8g8A6811vB8yawDARQyK\n9UWxBgBcxKBYXwwYAACMkAEDAFhTBsXGQRuUlRGKBZida2k/ZNYYFKFYAIZGscagCMUCMDQGDAAA\nRkixxkrs7u5kY+Nckr0ke9NQ7M6qdwsYsMlkkq2tM9naOpPJZLLq3YFj0wZlZYRigWWRk2UZZNYA\n4JTkZFkGmTUAgBGyKC4Ag2fxWNaZNigAoyAny6LJrAFL4x81gJNTrAFLYWoO4HQUa8BSmJoDOB3T\noAAAI6RYAy7i7hJXZxV8YNm0QYHLGDC4Mnk+4Gpk1gBWTJ4PuBqZNQCAEXIHA4Bjsgo+sAraoAAn\nIM8HHEVmDYCFUojCbBRrACyMSVeYnWINgIUx6QqzMw0KADBCijWYgdXsGQp3roB+aYPCKcn4MDQG\nDGA2MmvQGRkfAA6TWQMAGCF3MIBTspo9AMugDQozkPEBrsY1Ylxk1gBgjRhCGh/FGgCsEUNI42PA\nAABghAwYAMACGEJiXrRBOZJgLMBsXEfHRWaNpRKMBYCTUayxVIKxAHAygxswqKpXVNWnquozVXVu\nVfsBANCzlQwYVNUzkvy7JC9P8j+TfKSq3tta+9Qq9ofLCcYCQB9W9c7arUkeaq19rrX25STvTvLq\nFe0LV7C9vZ177z1ofd52233yagCdm0wm2do6k62tM5lMJqveHeZoJZm1qjqTZLu1tjP9+p8lubW1\n9qZLniezBgDXYCisD4vKrFlnDQDW3N133zMt1A6Gwh5//GCbYm0YVlWsPZrk6w59fcN022XOnz//\n1Oebm5vZ3Nxc5H4BABzL/v5+9vf3F/5zVtUG/Yokn87BgMGfJPlwku9trX3ykudpgwLANWiD9mFQ\nS3e01v5vkh9Kcn+STyR596WFGqsnrAqwHgyFDZtFcbkiv6UBwMm4gwFL5Q4GAHAyg2qDAgBwPIo1\nrmh3dycbG+eS7CXZm97BYGfVuwWwVmR/mQdtUI40mUxy9933JDko3uTVAI5P9nd8ZNYAYI3I/o6P\nzBoAwAi53RQALMDu7k4uXDibxx8/+Pog+7u32p1iLWmDAsCCyP6Oi8wadMiFGIAnKdagMya9ADhM\nsQadMekFwGGmQQEARkixBqfkLg8MjdX2oU/aoDADAwYMhQwmzE5mDYCFkcGE2cmsAQCMkDsYAGC1\nfeiYNigASWQwYVYyawAdUNAAR1GsAayYiUngahRrACtmYhK4GtOgwNJYHBWgH6ZBgYtc2uq7cOGs\nVt+UiUlgFbRBgYto9V2dAQPgKItqg3pnDeAEtre3FWjAUinWgIto9QH0RRsUuIxWH8DJWboDAGbg\nlxAWTbEGAKdkQWOWQbEGAKdkypllsCguAMAIKdZYGavkA8uyu7uTjY1zSfaS7E2nnHdWvVtwLNqg\nrIT8CLBsBgxYNJk1BkV+BIChkVkDABghdzBgJaySDwDHow3KysiPADAkMmsAwGX84tsPxRoAcBGT\n9X1RrAEAFzFZ3xfToAAAI6RYGzl3EQBYX+7MMA7aoCMm6wCw/gwY9ENmjbmTdQCA+ZFZAwAYIXcw\nGDF3EQCA/mmDjpysA8D6cM3um8waAIyYobD+KdYAYMQMhfXPgAEAwAgZMACANWAobLy0QQFgTRgw\n6JvMGlzCRQuAnijW4BBTUQD0RrEGh5iKAqA3pkEBGK3JZJKtrTPZ2jqTyWSy6t2BpTINyloyFQXj\ncWns4cKFs2IPjIo2KGvLgAGMg9gD62JRbVDvrLG2tre3FWgADJ5iDYCuiT0wdtqgAHRP7IF1YOkO\nYBT8owysK8UaMHgWOwbWmWINGDxTf8A6syguAMAIKdaAbuzu7mRj41ySvSR706m/nSOfb1V7YAy0\nQYGuHHfAQL4N6I3MGsAh8m1Ab2TWAABGyB0MgLVkVXtgLLRBgbVlAV2gJzJrAAya4pt1p1gDYLBM\n9zIEijUABst0L0NgGhQAYIQUawyW1e1hfZz07hUwJtqgDJL8C6wfAwasO5k1OAH5FwCWTWYNAGCE\n3MGAQbK6PQBDoQ3KYMm/AEPimtY/mTUAGClDU+tBsQYAI2Voaj0YMAAAGKGZirWq+smq+mRVfayq\nfr2qnn3osTur6qHp41uHtt9SVX9YVZ+pqp+Z5ecDwBhYNHjcZn1n7f4k39xa+7YkDyW5M0mq6uYk\ndyS5Kckrk7y9qp58W/AXkry+tXZjkhurSsO9A1b7B+jX9vZ27r33oPV52233yauNzNwya1X1miRn\nWmv/vKrekqS11u6aPvZfkpxP8rkkH2yt3Tzd/tokL2ut/eAR31NmbQkEVwFgduuQWXtdkvdNP78+\nycOHHnt0uu36JI8c2v7IdBsrdPfd90wLtbNJDoq2J8fDAYDVuuaiuFX1QJLrDm9K0pL8WGvtN6fP\n+bEkX26t/cpC9hIAYKSuWay11m672uNV9f1JXpXkuw5tfjTJCw59fcN021Hbj3T+/PmnPt/c3Mzm\n5ua1dpkTsto/AJzc/v5+9vf3F/5zZsqsVdUrktyd5Dtba392aPvNSd6V5CU5aHM+kORFrbVWVR9K\n8qYkH0nyW0l+rrX2/iO+v8zaklgZG2D9uZavVpeL4lbVQ0m+KsmThdqHWmtvmD52Z5LXJ/lykje3\n1u6fbn9xkl9K8tVJ3tdae/NVvr9iDQCOwbDY6nVZrC2aYg0AjsddDlZvHaZBAQCYs2sOGAAA/TMs\nNlzaoKycQCzAfLierpbMGoMkEAvAUCjWGCSBWACGwoABAMAIKdZYqd3dnWxsnEuyl2RvGojdWfVu\nAQM2mUyytXUmW1tnMplMVr07cE3aoKycQCywLHKyLJLMGgDMSE6WRZJZAwAYIYviAjAaFo5lHWmD\nAjAqcrIsiswa0CX/8AEcUKwB3TFZB/A0xRrQHZN1AE8zDQqwJBZNBXpiGhQ4tSFO1l3a2r1w4azW\nLrBS2qDATIY2YKC1C5zWotqg3lkDZrK9vb32BRpAzxRrAIcMsbULrDdtUIBLDK21CyyHpTsAWCuK\nXsZGsQbA2rBgMmOkWANgbZiqZYwsigsAMEKKNTjEyvUwH7u7O9nYOJdkL8nedKp2Z9W7BWtJGxSm\nZGxgvgwYMDYya7BgMjYAzEJmDQBghNzBAKasXA9Aj7RB4RAZGwBOS2YNAEbIL5HrQ7EGACNjSn29\nKNYAYGRMqa8X06AAACOkWOMiVvAH6Ic7QZBog3KIbARAfwwYrA+ZNRZONgIATk9mDQBghNzBgKdY\nwR8A+qMNykVkIwCGwfV8+WTWAIBjMTC2Goo1AOBYDIythgEDAIARMmAAAANjYGxYtEFZKQFYgMVw\nfV0+mTUGRwAWgCFRrDE4ArAADIkBAwCAEVKssTK7uzvZ2DiXZC/J3jQAu7Pq3QJGaDKZZGvrTLa2\nzmQymax6d+Ai2qCslAAssGrys8yLzBoALID8LPMiswYAMEIWxQVg1CwgS++0QQEYPflZ5kFmDeiS\nf+QADijWgO6YogN4mmIN6I4pOoCnmQYFABghxRpwakO/C4VV7YEeaIMCMxnqgIE8HnBSMmsASySP\nB5yUzBoAwAi5gwHAFVjVHuiFNijAEYaaxwMWQ2YNgLWm+GXoFGsArC3TtYyBYg2AtWW6ljEwDQoL\nZPFTAHplGpTRu7Q9c+HCWe0ZmDPTtXB62qCMnvYMLIcBA4ZuUW1Q76wBsBTb29sKNDgFxRqjpz0D\nQM+0QSHaMwDMztIdAEASv2D2SrEGAFhguGOKNQDABHvHLIoLADBCijUuYzV/gH7t7u5kY+Nckr0k\ne9MJ9p1V7xYLpA3KRWQhAPpnwKBPMmsshSwEAJyOzBoAwAi5gwEXsZo/APRFG5TLyEIADIPr+XJ1\nnVmrqt0k/ybJ32it/fl0251JXpfkiSRvbq3dP91+S5JfSvLVSd7XWvtXV/m+ijUAOAUDY8vXbWat\nqm5IcluSzx3adlOSO5LclOSVSd5eVU/u/C8keX1r7cYkN1aVswYA5uzuu++ZFmpnkxwUbU++y8Z6\nmceAwU8n+ZFLtr06ybtba0+01j6b5KEkt1bV85M8q7X2kenz3pnkNXPYBwCAQZppwKCqbk/ycGvt\n40+/cZYkuT7J7x76+tHptieSPHJo+yPT7QDAHBkYG45rFmtV9UCS6w5vStKS/HiSH81BCxQWQjgW\n4HS2t7dz7717h66h8mrr6prFWmvtisVYVf2dJF+f5A+mebQbkny0qm7NwTtpX3fo6TdMtz2a5AVX\n2H6k8+fPP/X55uZmNjc3r7XLDMSl4dgLF84KxwKcwPb2tmvmAu3v72d/f3/hP2duS3dU1R8nuaW1\n9r+q6uYk70rykhy0OR9I8qLWWquqDyV5U5KPJPmtJD/XWnv/Ed/TNOiIuZsCAOtkUdOg81wUt+Wg\nRZrW2oNV9Z4kDyb5cpI3HKq63piLl+64YqEGAIBFcemYNYKAeZF/ZRm6XhR3URRruMACs/KLH8ui\nWAOAU5B/ZVm6vYMBAACLM88BAwDojsVhWXfaoAAMnvwryyCzBoyCf1SBdaVYAwbP1B6wzhRrwOCZ\n2gPWmWlQAIARUqwB3djd3cnGxrkke0n2plN7O6f6XpPJJFtbZ7K1dSaTyWSu+wmwTNqgQFfmMWAg\n+wasgswawDHJvgGrILMGADBC7mAADI4V64Eh0QYFBsniusCyyawBwCEKcnqjWAOAKRO/9EixBgBT\nJn7pkWlQAIARUqwxGFash/GY590uoHfaoAyC/AqMjwEDeiOzBlchvwLAqsmsAQCMkDsYMAhWrAdg\nqLRBGQz5FYCnuSYun8waAHAshq5WQ7EGAByLoavVMGAAADBCBgwAYGAMXQ2LNiiXEUoFWH+u5csn\ns8ZSCKUCwOko1lgKoVQAOB0DBgAAI6RY4yK7uzvZ2DiXZC/J3jSUurPq3QLgGiaTSba2zmRr60wm\nk8mqd4c50gblMkKpAOtF3rgPMmsAwBXJG/dBZg0AYIQsigsAa84iuMOmDQoAAyBvvHoyawAAHZNZ\nAwAYIcUaAEDHFGsAAB1TrAEAdEyxBgDQMcUaAEDHFGsAAB1TrAEAdEyxBgDQMcUaAEDHFGsAAB1T\nrAEAdEyxBgDQMcUaAEDHFGsAAB1TrAEAdEyxBgDQMcUaAEDHFGsAAB1TrAEAdEyxBgDQMcUaAEDH\nFGsAAB1TrAEAdEyxBgDQMcUaAEDHFGsAAB1TrAEAdEyxBgDQMcUaAEDHFGsAAB1TrAEAdEyxBgDQ\nMcUaAEDHFGsAAB1TrAEAdEyxBgDQMcUaAEDHFGsAAB1TrAEAdEyxBgDQMcUaAEDHFGsAAB1TrAEA\ndGzmYq2q/mVVfbKqPl5Vbzu0/c6qemj62Nah7bdU1R9W1Weq6mdm/fkAAEM2U7FWVZtJ/lGSb2mt\nfUuSfzvdflOSO5LclOSVSd5eVTV92S8keX1r7cYkN1bV9iz7wHzt7++vehdGxzFfPsd8+Rzz5XPM\nh2PWd9Z+MMnbWmtPJElr7YvT7a9O8u7W2hOttc8meSjJrVX1/CTPaq19ZPq8dyZ5zYz7wBz5n3v5\nHPPlc8yXzzFfPsd8OGYt1m5M8p1V9aGq+u2qevF0+/VJHj70vEen265P8sih7Y9MtwEAcAXPvNYT\nquqBJNcd3pSkJfnx6euf21r7jqr69iS/muSFi9hRAIAxqtba6V9c9b4kd7XWfmf69UNJviPJDyRJ\na+1t0+3vT/LWJJ9L8tuttZum21+b5GWttR884vuffucAAJastVbXftbJXPOdtWv4jSTfleR3qurG\nJF/VWvuzqrovybuq6qdy0Ob8xiQfbq21qvpSVd2a5CNJvi/Jzx31zRfxFwYAWCezFmvvSPIfqurj\nSf5PDoqvtNYerKr3JHkwyZeTvKE9/RbeG5P8UpKvTvK+1tr7Z9wHAIDBmqkNCgDAYq30DgZV9dyq\nur+qPl1Vk6p6zhWec2NV/X5VfXT655eq6k3HfT0XO+4xq6rnVNWvThc1/kRVvWS6/a1V9cj0v8dH\nq+oVy/0brJ85HHPn+Qmd4Jh/tqr+YHpt+fCh7c7zE5rDMXeen9BJjllVPWN6Lt93aJvz/ITmcMxP\ndZ6v+nZTb0nygdbaNyX5YJI7L31Ca+0zrbW/21q7JcmLk/xlkv903NdzmeMes5/NQZv6piTfmuST\nhx77qdbaLdMPbexrm/WYO89P7rjH7P8l2ZxeY2695DHn+cnMesyd5yd3kmP25hxEky7lPD+ZWY/5\n6c7z1tqvAYZgAAAC9UlEQVTKPpJ8Ksl108+fn+RT13j+VpL/etrX+zjeMUvy7CT//YjXvzXJ7qr/\nHuv0MYdj7jxfwDGfPvbHSf76FbY7z5d/zJ3nizvmNyR5IMlmkvsObXeeL/+Yn+o8X/U7a89rrT2W\nJK21zyd53jWe/0+S/MoMr+d4x+wbknyxqt4xfQv3nqraOPT4D1XVx6rqF7UqjmXWY+48P7njHrOW\n5IGq+khV/cAljznPT2bWY+48P7njHrOfTvIjOTj2l3Ken8ysx/xU5/nCi7WqeqAObtz+5MfHp3/e\nfoWnHzntUFVfmeT2HCy8exTTEpnLMX9mkluS/Hw7aD//7xy8dZskb0/ywtbatyX5fJKfWsTfYd0s\n+JhfuoSN8zxzu7a8dHq8X5XkjVX196fbnedXsOBjftzXj8qsx7yqvjvJY621j+XgWnL4euI8v4IF\nH/Nrvv5KZl2645paa7cd9VhVPVZV17XWHquD+4Z+4Srf6pVJ/ltr7U8PbTvJ60djDsf8kSQPt9Z+\nb/r1ryU5N/3eh4//v0/ym3Pa7bW2yGOe5PPO88vN49rSWvuT6Z9/WlX3Jrk1yQXn+ZUt8pjH9fyK\n5nDMX5rk9qp6VZKNJM+qqne21r7PeX5lizzmOeV5vuo26H1Jvn/6+dkk773Kc783F7dAT/p6Dlzz\nmE3fon24DhY6TpKXZxqSnJ5cT/rHSf5oYXs6HDMd8+O8nstc85hV1ddU1ddOP/8rOcjE/tH0a+f5\nyc10zI/zei5znGvLj7bWvq619sIkr03ywWnR4Dw/nZmO+XFef0UrDur9tSQfSPLpJPcn+avT7X8z\nyX8+9LyvSfKnSZ51nNf7mMsx/9Yc3GXiYzmYvn3OdPs7k/zhdPtvZBqU9LHQY+48X8Axz0FO8GNJ\nfj/Jx5O85dDrnefLP+bO8wUc80ue/7JcHHZ3ni//mJ/qPLcoLgBAx1bdBgUA4CoUawAAHVOsAQB0\nTLEGANAxxRoAQMcUawAAHVOsAQB0TLEGANCx/w93Sc6Or80xygAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x117095ed0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "interact(F, strength=stepping_tuple)"
    ]
@@ -537,13 +625,29 @@
     "0759a9231d5849e495d3ed8e6ace3193": {
      "views": []
     },
+    "2cdf4774927a44d3be88d754daa4c535": {
+     "views": [
+      {
+       "cell_index": 31
+      }
+     ]
+    },
     "45fd2bad2404447fad48e1c821aaa50f": {
      "views": []
     },
     "6698c6b7b46d433b94f1aad947663602": {
      "views": []
     },
+    "75a29fc5f4f64760b6527d990acf4fab": {
+     "views": []
+    },
     "9cda857ecd694dfb8b69f58797fc0511": {
+     "views": []
+    },
+    "b44a39df4996435eb8494b29931540a7": {
+     "views": []
+    },
+    "e183765dde3d4799b3800705cf4d48e5": {
      "views": []
     }
    },
