modifying docstrings so that Args and Returns appear as titles of sections

--- a/orthogonality testing.ipynb
+++ b/orthogonality testing.ipynb
@@ -32,12 +32,12 @@
     }
    ],
    "source": [
-    "import Roots\n",
-    "import Potapov\n",
-    "import Time_Delay_Network\n",
-    "import Time_Sims\n",
-    "import functions\n",
-    "import tests\n",
+    "import Potapov_Code.Roots as Roots \n",
+    "import Potapov_Code.Potapov as Potapov\n",
+    "import Potapov_Code.Time_Delay_Network as Time_Delay_Network\n",
+    "import Potapov_Code.Time_Sims as Time_Sims\n",
+    "import Potapov_Code.functions as functions\n",
+    "import Potapov_Code.tests as tests\n",
     "\n",
     "import numpy as np\n",
     "import numpy.linalg as la\n",
@@ -859,6 +859,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.11"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
